--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -71,6 +71,10 @@
   background-color: gray;
   color: white;
 }
+.type-dragon {
+  background-color: green;
+  color: white;
+}
 /* </pokemon-label-color> */
 
 :root {
